aligned sections removed padding and fix last section imgs

--- a/style.css
+++ b/style.css
@@ -2,6 +2,21 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: avalon;
+  src: url(Fonts/avalon/Avalon_Plain.ttf);
+}
+
+body {
+  margin: 0;
+  font-family: avalon, sans-serif;
+}
+
+header,
+main {
+  margin-left: 2px;
+}
+
 a {
   text-decoration: none;
 }
@@ -48,6 +63,7 @@ a:hover {
   flex-direction: row;
   justify-content: space-between;
   border-bottom: 1px solid #aaa;
+  margin-left: -2px;
 }
 
 .right-icons {
@@ -89,7 +105,6 @@ a:hover {
 /* text */
 
 .internal-text1 {
-  font-family: sans-serif;
   color: white;
   margin-left: 15px;
   line-height: 0.8;
@@ -102,12 +117,14 @@ a:hover {
   margin-left: 15px;
   line-height: 0.8;
   margin-bottom: 0;
+  height: 30px;
 }
 
 .internal-text3 {
   margin: 0;
   padding-left: 16px;
   padding-top: 15px;
+  /* height: 30px; */
 }
 
 .internal-text4 {
@@ -142,6 +159,7 @@ a:hover {
 
 .top-txt3 {
   padding-top: 80px;
+  height: 107px;
 }
 
 .top-txt4 {
@@ -164,7 +182,7 @@ a:hover {
 
 .latest-news {
   max-width: 1366px;
-  margin-bottom: 3%;
+  margin-bottom: 4%;
 }
 
 .latest-news h1,
@@ -198,7 +216,8 @@ a:hover {
   margin-top: 0;
   width: 100%;
   height: 170px;
-  background-image: url("Assets-2/covid-19.png");
+  background-image: linear-gradient(rgb(228 224 225 / 5%), rgb(8 8 8 / 93%)),
+    url("Assets-2/covid-19.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -206,7 +225,8 @@ a:hover {
 .img-2 {
   width: 100%;
   height: 170px;
-  background-image: url("Assets-2/ces-gadgets.jpg");
+  background-image: linear-gradient(rgb(228 224 225 / 5%), rgb(8 8 8 / 93%)),
+    url("Assets-2/ces-gadgets.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -214,7 +234,8 @@ a:hover {
 .img-3 {
   width: 100%;
   height: 170px;
-  background-image: url("Assets-2/rolls-royce.jpg");
+  background-image: linear-gradient(rgb(228 224 225 / 5%), rgb(8 8 8 / 93%)),
+    url("Assets-2/rolls-royce.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -291,7 +312,7 @@ header {
 }
 
 main {
-  margin-bottom: 170px;
+  margin-bottom: 100px;
 }
 
 .lat-news,
@@ -429,6 +450,19 @@ li {
   border-bottom: 1px solid rgb(240, 235, 235);
 }
 
+.seeDetails {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding-right: 10%;
+}
+
+.seeDetails p {
+  color: #f42;
+  width: 17%;
+}
+
 /* footer section */
 
 .footer-top {
@@ -507,7 +541,7 @@ li {
 }
 
 .last-line {
-  height: 41px;
+  height: 34px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -549,6 +583,7 @@ li {
     height: 80px;
     top: 0;
     position: fixed;
+    margin-left: -2px;
   }
 
   .first-nav {
@@ -614,7 +649,6 @@ li {
     padding-top: 10px;
     border: 1px solid #aaa;
     margin-left: auto;
-    margin-right: 10px;
     justify-content: flex-end;
   }
 
@@ -631,11 +665,25 @@ li {
   }
 
   .headline1 {
-    font-size: 40px;
+    font-size: 37px;
+  }
+
+  .short {
+    width: 110px;
+    margin: 0;
+    padding-left: 5px;
+  }
+
+  .internal-text1 {
+    line-height: 1.1;
+  }
+
+  .internal-text2 {
+    height: 50px;
   }
 
   .internal-text2 a {
-    font-size: 26px;
+    font-size: 16px;
   }
 
   .img-1 time,
@@ -661,7 +709,7 @@ li {
     margin-top: 93px;
     display: grid;
     grid-gap: 7px;
-    grid-template-columns: 60% 40%;
+    grid-template-columns: 59% 40%;
     grid-template-rows: 167px 167px;
     grid-template-areas:
       "first second"
@@ -678,6 +726,11 @@ li {
 
   .top-txt3 {
     padding-top: 40px;
+    height: 90px;
+  }
+
+  .top-txt3 .string-elems {
+    font-size: 5px;
   }
 
   .latest-news-container,
@@ -694,19 +747,25 @@ li {
   .lat-news,
   .latest-deals {
     width: 21%;
+    display: flex;
+    flex-direction: column;
   }
 
   .lat-news {
-    width: 23%;
+    width: 22%;
   }
 
   .lat-news h4 {
-    margin-top: 138px;
+    /* margin-top: 138px; */
     margin-left: 0%;
   }
 
+  .seeDetails p {
+    width: 16%;
+  }
+
   .latest-deals h4 {
-    margin-top: 216px;
+    /* margin-top: 216px; */
     margin-left: 0%;
   }
 
@@ -714,13 +773,12 @@ li {
     display: block;
     width: 100%;
     height: 122px;
-    margin-right: 25px;
   }
 
   .latest-deals img {
     display: block;
     width: 100%;
-    height: 200px;
+    height: auto;
   }
 
   .latest-fund {
@@ -787,11 +845,13 @@ li {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 30px;
+    /* margin-left: 30px; */
+    padding-left: 5%;
   }
 
   .last-section-metaCont h1 {
     width: 100%;
+    margin-top: 0;
   }
 
   .footer-bottom {
@@ -812,9 +872,9 @@ li {
 
 /* Desktop version */
 @media only screen and (min-width: 1200px) {
-  body {
+  /* body {
     margin: 0;
-  }
+  } */
 
   header {
     width: 99.5%;
@@ -881,11 +941,15 @@ li {
   .first-section {
     display: grid;
     grid-gap: 7px;
-    grid-template-columns: 60% 40%;
+    grid-template-columns: 59% 40%;
     grid-template-rows: 195px 195px;
     grid-template-areas:
       "first second"
       "first third";
+  }
+
+  .top-txt1 {
+    padding-top: 70px;
   }
 
   .top-txt2 {
@@ -894,6 +958,7 @@ li {
 
   .top-txt3 {
     padding-top: 85px;
+    height: 127px;
   }
 
   .top-txt4 {
@@ -917,17 +982,18 @@ li {
   }
 
   .lat-news {
-    margin-right: 20px;
-    width: 21%;
+    margin: 0;
+    width: 22%;
   }
 
   .lat-news img,
   .latest-deals img {
-    width: 274px;
+    width: 100%;
   }
 
   .latest-deals {
     width: 23%;
+    max-width: 298px;
   }
 
   .latest-fund {
@@ -989,6 +1055,9 @@ li {
 
   .last-section-metaCont {
     width: 93%;
-    margin-left: 84px;
+    /* margin-left: 84px; */
+  }
+  .seeDetails p {
+    width: 10%;
   }
 }
